--- a/chamber/join.html
+++ b/chamber/join.html
@@ -252,38 +252,26 @@
 						<div class="radio-group">
 							<div class="radio-option">
 								<label><strong>NP Membership</strong></label>
-								<section>
-									<input type="radio" name="membership" value="NP" required />
-									<div class="membership-feature">No cost membership</div>
-								</section>
+								<input type="radio" name="membership" value="NP" required />
+								<div class="membership-feature">No cost membership</div>
 							</div>
 
 							<div class="radio-option">
 								<label><strong>Bronze Membership</strong></label>
-								<section>
-									<input type="radio" name="membership" value="Bronze" />
-									<div class="membership-feature">
-										Basic networking and resources
-									</div>
-								</section>
+								<input type="radio" name="membership" value="Bronze" />
+								<div class="membership-feature">Basic networking and resources</div>
 							</div>
 
 							<div class="radio-option">
 								<label><strong>Silver Membership</strong></label>
-								<section>
-									<input type="radio" name="membership" value="Silver" />
-									<div class="membership-feature">
-										Enhanced benefits and support
-									</div>
-								</section>
+								<input type="radio" name="membership" value="Silver" />
+								<div class="membership-feature">Enhanced benefits and support</div>
 							</div>
 
 							<div class="radio-option">
 								<label><strong>Gold Membership</strong></label>
-								<section>
-									<input type="radio" name="membership" value="Gold" />
-									<div class="membership-feature">Premium features</div>
-								</section>
+								<input type="radio" name="membership" value="Gold" />
+								<div class="membership-feature">Premium features</div>
 							</div>
 						</div>
 						<h3>More Info</h3>
