--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Casas Grandes | Chamber</title>
 		<meta
@@ -80,7 +80,7 @@
 				</li>
 				<li>
 					<a
-						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						href="https://flixjavier.github.io/wdd231/chamber/discover.html"
 						title="Discover"
 						>Discover</a
 					>
