--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -75,7 +75,7 @@
 				</li>
 				<li>
 					<a
-						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						href="https://flixjavier.github.io/wdd231/chamber/discover.html"
 						title="Discover"
 						>Discover</a
 					>
