--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,6 +34,7 @@
 		/>
 		<link rel="stylesheet" href="styles/normalize.css" />
 		<link rel="stylesheet" href="styles/small.css" />
+		<link rel="stylesheet" href="styles/medium.css" />
 		<link rel="stylesheet" href="styles/large.css" />
 
 		<!-- ADD FONTS -->
@@ -45,6 +46,7 @@
 		/>
 		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon" />
 		<script src="scripts/base.mjs" type="module"></script>
+		<script src="scripts/discover.js" type="module"></script>
 	</head>
 	<body>
 		<header>
@@ -87,7 +89,10 @@
 				</li>
 			</ul>
 		</nav>
-		<main></main>
+		<main>
+			<h1>Come and Discover Casas Grandes</h1>
+			<section id="allplaces"></section>
+		</main>
 		<footer class="footer">
 			<section class="footer-info"></section>
 			<div class="social-icons"></div>
