--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -91,6 +91,11 @@
 		</nav>
 		<main>
 			<h1>Come and Discover Casas Grandes</h1>
+			<!-- Visitor message container -->
+			<div id="visitMessage" class="visit-message" style="display: none">
+				<button class="close" aria-label="Close message">&times;</button>
+				<p id="messageContent"></p>
+			</div>
 			<section id="allplaces"></section>
 		</main>
 		<footer class="footer">
