--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Chamber Membership Application</title>
 		<meta
@@ -87,7 +87,7 @@
 				</li>
 				<li>
 					<a
-						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						href="https://flixjavier.github.io/wdd231/chamber/discover.html"
 						title="Discover"
 						>Discover</a
 					>
@@ -259,13 +259,17 @@
 							<div class="radio-option">
 								<label><strong>Bronze Membership</strong></label>
 								<input type="radio" name="membership" value="Bronze" />
-								<div class="membership-feature">Basic networking and resources</div>
+								<div class="membership-feature">
+									Basic networking and resources
+								</div>
 							</div>
 
 							<div class="radio-option">
 								<label><strong>Silver Membership</strong></label>
 								<input type="radio" name="membership" value="Silver" />
-								<div class="membership-feature">Enhanced benefits and support</div>
+								<div class="membership-feature">
+									Enhanced benefits and support
+								</div>
 							</div>
 
 							<div class="radio-option">
