--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
 							>Chamber</a
 						>
 					</li>
-					<li><a href="#">Final</a></li>
+					<li>
+						<a href="https://flixjavier.github.io/wdd231/project/index.html"
+							>Final</a
+						>
+					</li>
 					<li><a href="https://github.com/flixjavier">GitHub Profile</a></li>
 					<li>
 						<a href="https://www.linkedin.com/in/felixjflores-zamarripa/"
