--- a/project/index.html
+++ b/project/index.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to AGROAVE, your premier source for high-quality Mexican onions. Discover our range of fresh produce and learn more about our commitment to sustainable agriculture.">
-  <meta name="author" content="Felix Flores">
-  <link rel="stylesheet" type="text/css" href="styles/form.css">
-  <link rel="stylesheet" type="text/css" href="styles/base.css">
-  <link rel="stylesheet" type="text/css" href="styles/base-large.css">
-  <title>AGROAVE | Mexican 🇲🇽 Onions 🧅</title>
-  <script src="scripts/base.js" defer></script>
-</head>
-<body>
-  <header>
-    <figure class="logo-container"><img src="images/AgroAve.png" alt="company logo" loading="lazy"></figure>
-    <button id="menu"></button>
-    <nav class="navigation">
-      <a href="#" title="Home" class="home">Home</a>
-      <a href="#" title="Onions" class="onions">Onions</a>
-      <a href="#" title="Contact" class="contact">Contact Us</a>
-    </nav>
-  </header>
-  <main class="main">
-    <h2>Home</h2>
-  </main>
-  <footer>
-    <p>&copy; <span id="current-year"></span> 🌎 Félix Flores 🌏 🇲🇽 México</p>
-    <p id="lastModified"></p>
-    <figure class="social"><img src="images/instagram_logo.svg" alt="instagram logo" loading="lazy"></figure>
-    <figure class="social"><img src="images/linkedin_logo.svg" alt="linkedIn logo" loading="lazy"></figure>
-    <figure class="social"><img src="images/github_logo.svg" alt="Github logo" loading="lazy"></figure>
-  </footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Welcome to AGROAVE, your premier source for high-quality Mexican onions. Discover our range of fresh produce and learn more about our commitment to sustainable agriculture."
+		/>
+		<meta name="author" content="Felix Flores" />
+    <meta property="og:type" content="website" />
+		<meta property="og:title" content="AGROAVE | Mexican Onions" />
+		<link rel="stylesheet" type="text/css" href="styles/form.css" />
+		<link rel="stylesheet" type="text/css" href="styles/base.css" />
+    <link rel="stylesheet" type="text/css" href="styles/base-small.css" />
+    <link rel="stylesheet" type="text/css" href="styles/base-medium.css" />
+		<link rel="stylesheet" type="text/css" href="styles/base-large.css" />
+		<title>AGROAVE | Mexican 🇲🇽 Onions 🧅</title>
+		<link rel="icon" href="images/onion.ico" type="image/x-icon" />
+		<script src="scripts/base.js" defer></script>
+	</head>
+	<body>
+		<header>
+			<figure class="logo-container">
+				<img src="images/AgroAve.png" alt="company logo" loading="lazy" />
+			</figure>
+			<button id="menu"></button>
+			<nav class="navigation">
+				<a href="#" title="Home" class="home">Home</a>
+				<a href="#" title="Onions" class="onions">Onions</a>
+				<a href="#" title="Contact" class="contact">Contact Us</a>
+			</nav>
+		</header>
+		<main class="main">
+			<h2>Home</h2>
+		</main>
+		<footer>
+			<p>&copy; <span id="current-year"></span> 🌎 Félix Flores 🌏 🇲🇽 México</p>
+			<p id="lastModified"></p>
+			<figure class="social">
+				<img
+					src="images/instagram_logo.svg"
+					alt="instagram logo"
+					loading="lazy"
+				/>
+			</figure>
+			<figure class="social">
+				<img
+					src="images/linkedin_logo.svg"
+					alt="linkedIn logo"
+					loading="lazy"
+				/>
+			</figure>
+			<figure class="social">
+				<img src="images/github_logo.svg" alt="Github logo" loading="lazy" />
+			</figure>
+		</footer>
+	</body>
 </html>
