--- a/project/index.html
+++ b/project/index.html
@@ -16,7 +16,7 @@
 
 		<meta
 			property="og:image"
-			content="https://flixjavier.github.io/wdd231/project/images/hero-onions.jpg"
+			content="https://flixjavier.github.io/wdd231/project/images/marketonions.webp"
 		/>
 		<!-- URL of a strong visual (e.g. your hero image showing fresh onions or farm logo) -->
 
@@ -31,7 +31,7 @@
 
 		<meta
 			property="og:title"
-			content="AGROAVE – Mexican Onions Exported from Camargo, Chihuahua to the USA"
+			content="AGROAVE Mexican Onions Exported from Camargo, Chihuahua to the USA"
 		/>
 		<!-- Clear, descriptive page title -->
 
@@ -52,7 +52,7 @@
 
 		<meta
 			name="twitter:image"
-			content="https://flixjavier.github.io/wdd231/project/images/hero-onions.jpg"
+			content="https://flixjavier.github.io/wdd231/project/images/marketonions.webp"
 		/>
 		<!-- Same image used for OG for consistency on Twitter cards -->
 
