--- a/project/index.html
+++ b/project/index.html
@@ -63,7 +63,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/base-large.css" />
 		<title>AGROAVE | Mexican 🇲🇽 Onions 🧅</title>
 		<link rel="icon" href="images/onion.ico" type="image/x-icon" />
-		<script src="scripts/base.js" defer></script>
+		<script src="scripts/base.mjs" type="module" defer></script>
 	</head>
 	<body>
 		<header>
@@ -72,34 +72,36 @@
 			</figure>
 			<button id="menu"></button>
 			<nav class="navigation">
-				<a href="#" title="Home" class="home">Home</a>
-				<a href="#" title="Onions" class="onions">Onions</a>
-				<a href="#" title="Contact" class="contact">Contact Us</a>
+				<a href="#home" title="Home" class="home nav-link">Home</a>
+				<a href="#products" title="products" class="onions nav-link">Products</a>
+				<a href="#contactus" title="Contact" class="contact nav-link">Contact Us</a>
+				<a href="https://flixjavier.github.io/wdd231/project/siteplan.html" title="Contact " class="contact">Site Plan</a>
 			</nav>
 		</header>
+		<div class="card panel">
+					<h3 id="town"></h3>
+					<img id="graphic" src="#" alt="test" />
+					<p id="description"></p>
+					<p id="temperature"></p>
+					<p id="humidity"></p>
+					<p id="sunrise"></p>
+					<p id="sunset"></p>
+		</div>
+		<div class="panel weather-forecast">
+					<h3>Weather Forecast</h3>
+					<p id="forecast"></p>
+		</div>
 		<main class="main">
-			<h2>Home</h2>
+			
 		</main>
 		<footer>
-			<p>&copy; <span id="current-year"></span> 🌎 Félix Flores 🌏 🇲🇽 México</p>
-			<p id="lastModified"></p>
-			<figure class="social">
-				<img
-					src="images/instagram_logo.svg"
-					alt="instagram logo"
-					loading="lazy"
-				/>
-			</figure>
-			<figure class="social">
-				<img
-					src="images/linkedin_logo.svg"
-					alt="linkedIn logo"
-					loading="lazy"
-				/>
-			</figure>
-			<figure class="social">
-				<img src="images/github_logo.svg" alt="Github logo" loading="lazy" />
-			</figure>
+		<footer class="footer">
+			<section class="footer-info"></section>
+			<div class="social-icons"></div>
+			<div class="footer-right">
+				<p id="current-year"></p>
+				<p id="lastModified"></p>
+			</div>
 		</footer>
 	</body>
 </html>
