--- a/project/index.html
+++ b/project/index.html
@@ -70,6 +70,7 @@
 			<figure class="logo-container">
 				<img src="images/agroave_logo.png" alt="company logo" loading="lazy" />
 			</figure>
+			<h1>Welcome to AgroAVE</h1>
 			<button id="menu"></button>
 			<nav class="navigation">
 				<a href="#home" title="Home" class="home nav-link">Home</a>
@@ -78,19 +79,26 @@
 				<a href="https://flixjavier.github.io/wdd231/project/siteplan.html" title="Contact " class="contact">Site Plan</a>
 			</nav>
 		</header>
-		<div class="card panel">
+		<section class="api">
+			<div class="card panel">
+				<div class="weather-main">
 					<h3 id="town"></h3>
-					<img id="graphic" src="#" alt="test" />
+					<img id="graphic" src="#" alt="Weather Icon" />
 					<p id="description"></p>
+				</div>
+				<div class="weather-info">
 					<p id="temperature"></p>
 					<p id="humidity"></p>
 					<p id="sunrise"></p>
 					<p id="sunset"></p>
-		</div>
-		<div class="panel weather-forecast">
-					<h3>Weather Forecast</h3>
-					<p id="forecast"></p>
-		</div>
+				</div>
+			</div>
+
+			<div class="panel weather-forecast">
+				<h3>Weather Forecast</h3>
+				<p id="forecast">Light showers expected tomorrow.</p>
+			</div>
+		</section>
 		<main class="main">
 			
 		</main>
