--- a/project/index.html
+++ b/project/index.html
@@ -58,20 +58,20 @@
 
 		<link rel="stylesheet" type="text/css" href="styles/base.css" />
 		<link rel="stylesheet" type="text/css" href="styles/form.css" />
-		<link rel="stylesheet" type="text/css" href="styles/base-small.css" />
-		<link rel="stylesheet" type="text/css" href="styles/base-medium.css" />
+<!-- 		<link rel="stylesheet" type="text/css" href="styles/base-small.css" />
+		<link rel="stylesheet" type="text/css" href="styles/base-medium.css" /> -->
 		<link rel="stylesheet" type="text/css" href="styles/base-large.css" />
 		<title>AGROAVE | Mexican 🇲🇽 Onions 🧅</title>
 		<link rel="icon" href="images/onion.ico" type="image/x-icon" />
-		<script src="scripts/base.mjs" type="module" defer></script>
+		<script src="scripts/base.js" type="module" defer></script>
 	</head>
 	<body>
 		<header>
 			<figure class="logo-container">
-				<img src="images/agroave_logo.png" alt="company logo" loading="lazy" />
+				<img src="images/agroave_logo.webp" alt="company logo" loading="lazy" />
 			</figure>
 			<h1>Welcome to AgroAVE</h1>
-			<button id="menu"></button>
+			<button id="menu" aria-label="Open menu"></button>
 			<nav class="navigation">
 				<a href="#home" title="Home" class="home nav-link">Home</a>
 				<a href="#products" title="products" class="onions nav-link">Products</a>
