finish thank you html

--- a/project/index.html
+++ b/project/index.html
@@ -58,7 +58,7 @@
 
 		<link rel="stylesheet" type="text/css" href="styles/base.css" />
 		<link rel="stylesheet" type="text/css" href="styles/form.css" />
-<!-- 		<link rel="stylesheet" type="text/css" href="styles/base-small.css" />
+		<!-- 		<link rel="stylesheet" type="text/css" href="styles/base-small.css" />
 		<link rel="stylesheet" type="text/css" href="styles/base-medium.css" /> -->
 		<link rel="stylesheet" type="text/css" href="styles/base-large.css" />
 		<title>AGROAVE | Mexican 🇲🇽 Onions 🧅</title>
@@ -74,9 +74,18 @@
 			<button id="menu" aria-label="Open menu"></button>
 			<nav class="navigation">
 				<a href="#home" title="Home" class="home nav-link">Home</a>
-				<a href="#products" title="products" class="onions nav-link">Products</a>
-				<a href="#contactus" title="Contact" class="contact nav-link">Contact Us</a>
-				<a href="https://flixjavier.github.io/wdd231/project/siteplan.html" title="Contact " class="contact">Site Plan</a>
+				<a href="#products" title="products" class="onions nav-link"
+					>Products</a
+				>
+				<a href="#contactus" title="Contact" class="contact nav-link"
+					>Contact Us</a
+				>
+				<a
+					href="https://flixjavier.github.io/wdd231/project/siteplan.html"
+					title="Contact "
+					class="contact"
+					>Site Plan</a
+				>
 			</nav>
 		</header>
 		<section class="api">
@@ -99,10 +108,7 @@
 				<p id="forecast">Light showers expected tomorrow.</p>
 			</div>
 		</section>
-		<main class="main">
-			
-		</main>
-		<footer>
+		<main class="main"></main>
 		<footer class="footer">
 			<section class="footer-info"></section>
 			<div class="social-icons"></div>
