--- a/project/thanks.html
+++ b/project/thanks.html
@@ -3,13 +3,68 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="" />
+		<meta
+			name="description"
+			content="Welcome to AGROAVE, your premier source for high-quality Mexican onions. Discover our range of fresh produce and learn more about our commitment to sustainable agriculture."
+		/>
 		<meta name="author" content="Felix Flores" />
+		<meta
+			property="og:description"
+			content="AGROAVE: Premium Mexican onions grown in Camargo City, Chihuahua and exported fresh to the USA. Learn about our sustainable farming practices, quality assurance, and how to order top-grade onions."
+		/>
+		<!-- Brief, compelling summary emphasizing location (Camargo City), product (onions), and export focus (USA) -->
+
+		<meta
+			property="og:image"
+			content="https://flixjavier.github.io/wdd231/project/images/marketonions.webp"
+		/>
+		<!-- URL of a strong visual (e.g. your hero image showing fresh onions or farm logo) -->
+
+		<meta
+			property="og:url"
+			content="https://flixjavier.github.io/wdd231/project/index.html"
+		/>
+		<!-- Canonical URL of the page for social shares -->
+
+		<meta property="og:type" content="website" />
+		<!-- Optional, usually 'website' for homepages -->
+
+		<meta
+			property="og:title"
+			content="AGROAVE Mexican Onions Exported from Camargo, Chihuahua to the USA"
+		/>
+		<!-- Clear, descriptive page title -->
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<!-- Suggested card type for best visual impact -->
+
+		<meta
+			name="twitter:title"
+			content="AGROAVE Premium Mexican Onions from Camargo Exported to USA"
+		/>
+		<!-- Keep title consistent with og:title -->
+
+		<meta
+			name="twitter:description"
+			content="Discover AGROAVE’s high-quality onions grown sustainably in Camargo City. Export-ready, USDA-grade produce shipped directly to the USA."
+		/>
+		<!-- Twitter description should mirror og:description -->
+
+		<meta
+			name="twitter:image"
+			content="https://flixjavier.github.io/wdd231/project/images/marketonions.webp"
+		/>
+		<!-- Same image used for OG for consistency on Twitter cards -->
+
 		<link rel="stylesheet" type="text/css" href="styles/base.css" />
+		<link rel="stylesheet" type="text/css" href="styles/form.css" />
+		<!-- 		<link rel="stylesheet" type="text/css" href="styles/base-small.css" />
+		<link rel="stylesheet" type="text/css" href="styles/base-medium.css" /> -->
 		<link rel="stylesheet" type="text/css" href="styles/base-large.css" />
 		<title>AGROAVE | Mexican 🇲🇽 Onions 🧅</title>
+		<link rel="icon" href="images/onion.ico" type="image/x-icon" />
+		<script src="scripts/base.js" type="module" defer></script>
 		<script src="scripts/thanks.js" defer></script>
-		<script src="scripts/base.mjs" type="module" defer></script>
 	</head>
 	<body>
 		<header>
@@ -30,7 +85,7 @@
 				</p>
 			</div>
 		</main>
-		<footer>
+		<footer class="footer">
 			<section class="footer-info"></section>
 			<div class="social-icons"></div>
 			<div class="footer-right">
